--- a/.env.freegroup
+++ b/.env.freegroup
@@ -1,21 +1,22 @@
-APP_NAME=【開発】FreeGroup
+APP_NAME=FreeGroup
 APP_ENV=local
-APP_KEY=base64:MOxCnYzB8OOmjSO2fXFeuP+OYcpQrMPmSIJfETNBquk=
-APP_DEBUG=true
-APP_URL=https://204b4774918d433fa1db11319e58d505.vfs.cloud9.ap-northeast-1.amazonaws.com/
+APP_KEY=
+APP_DEBUG=false
+APP_URL=http://url.to.freegroup
+FREEGROUP_VERSION=1.0
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=groupware
+DB_DATABASE=freegroup
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -23,14 +24,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=sv4.mcnx.jp
-MAIL_PORT=465
-MAIL_USERNAME=cloud9@network-tokai.jp
-MAIL_PASSWORD=SlzHwxEk
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=cloud9@network-tokai.jp
-MAIL_FROM_NAME=cloud9_Base_Develope
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
