--- a/.env.freegroup
+++ b/.env.freegroup
@@ -2,21 +2,22 @@ APP_NAME=FreeGroup
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://url.to.freegroup
+APP_URL=https://url.to.freegroup
 FREEGROUP_VERSION=1.0
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=address.to.your.sql.server
 DB_PORT=3306
-DB_DATABASE=freegroup
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=db_name
+DB_USERNAME=db_user
+DB_PASSWORD=db_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
+#QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -25,12 +26,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=mx.your.domain
+MAIL_PORT=465
+MAIL_USERNAME=mail_user
+MAIL_PASSWORD=mail_password
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=freegroup@your.domain
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
