--- a/public/.htaccess
+++ b/public/.htaccess
@@ -23,5 +23,5 @@
     RewriteRule ^ index.php [L]
     
     # Below has been apended by Iwata 2021-02-02
-    php_value memory_limit 200M
+    # php_value memory_limit 200M
 </IfModule>
